--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "prisma": "^5.5.2",
@@ -15,8 +18,8 @@
   },
   "scripts": {
     "start:dev": "nodemon src/index.ts",
-    "start":"node dist/index.js",
-    "build":"tsc"
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
